--- a/BusIk/app/src/main/res/layout/activity_mark_clients.xml
+++ b/BusIk/app/src/main/res/layout/activity_mark_clients.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,13 +26,13 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
-        android:padding="16dp"
         android:gravity="center"
-        android:visibility="invisible"
+        android:padding="16dp"
         android:text="На этом рейсе еще нет клиентов"
         android:textColor="@android:color/darker_gray"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <!-- Список клиентов -->
     <androidx.recyclerview.widget.RecyclerView
@@ -39,5 +41,21 @@
         android:layout_height="match_parent"
         android:layout_below="@id/title"
         android:padding="16dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/finishButt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/finish_icon" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
