--- a/BusIk/app/src/main/res/values-night/themes.xml
+++ b/BusIk/app/src/main/res/values-night/themes.xml
@@ -6,7 +6,7 @@
         <attr name="errorColor" format="color"/>
     </declare-styleable>
 
-    <style name="Theme.BusIk" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.BusIk" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/teal_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -35,5 +35,22 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:gravity">center_vertical</item>
 
+    </style>
+
+    <style name="dialogStyle" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="materialAlertDialogTheme">@style/dialogStyle</item>
+        <item name="buttonBarPositiveButtonStyle">@style/dialogPosButtonStyle</item>
+        <item name="buttonBarNeutralButtonStyle">@style/dialogPosButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/dialogNegButtonStyle</item>
+    </style>
+
+    <style name="dialogPosButtonStyle" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="backgroundTint">?attr/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="strokeColor">?attr/colorPrimary</item>
+    </style>
+
+    <style name="dialogNegButtonStyle" parent="Widget.Material3.Button.TextButton">
+        <item name="android:textColor">?attr/colorPrimary</item>
     </style>
 </resources>
